--- a/projetosite/Estilo/direcionar.css
+++ b/projetosite/Estilo/direcionar.css
@@ -6,6 +6,11 @@
 
 #direcionar{
     background-color: #eb5757;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 230px;
+    height: 50px;
 }
 
 .link{
@@ -15,15 +20,14 @@
 
 .li{
     display: inline-block;
-    margin: 0px 10px 0px 0px;
+    margin: 0px 35px 0px 0px;
 }
 
 #u{
-    width: 335px;
-    padding: 0px;
-    position: relative;
-    left: 65%;
-    bottom: 18px; 
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
 }
 
 #c{
@@ -32,18 +36,12 @@
 
 #carrinho{
     background-color: #222;
-    padding: 10px 15px 2px 15px;
-    border-radius: 5px;
+    padding: 4px 15px;
 }
 
 #car{
     display: inline-block;
     position: relative;
-    top: 3px;
+    bottom: 4px;
 }
 
-#logo1{
-    position: relative;
-    left: 10%;
-    top: 13px;
-}
