--- a/projetosite/Estilo/img1.css
+++ b/projetosite/Estilo/img1.css
@@ -10,35 +10,32 @@
 }
 
 #caixa1{
-    font-size: 18px;
-    text-align: left;
     height: 410px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.103),#222222b9 90%);
-    color: white;
-    text-align: center;
+    display: flex;
+    align-items: center;
 }
 
-#a1 , #a2{
+#matrizA{
+    color: white;
     text-align: left;
     width: 300px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-between;
     position: relative;
-    top: 25%;
     left: 17%;
 }
 
-#a2{
-    font-size: 17px;
-    width: 360px;
-    padding: 15px 0px 0px 0px;
+#ma11{
+    padding: 5px 17px;
+    background-color: rgba(0, 0, 0, 0);
+    border: 1px solid white;
 }
 
-#a3{
+#ma11:hover{
     border: 1px solid white;
-    color: white;
-    padding: 8px 18px;
-    border-radius: 5px;
-    position: relative;
-    top: 30%;
-    right: 28%;
-    text-decoration-line: none;
+    box-shadow: 0 0 0 1px #fff;
 }
