--- a/projetosite/Estilo/config.css
+++ b/projetosite/Estilo/config.css
@@ -23,6 +23,10 @@ h2{
     font-size: 1.8em;
 }
 
+h4{
+    font-size: 1.1em;
+}
+
 del{
     color: #eb5757;
 }
@@ -34,7 +38,6 @@ button{
     border: 1px solid #eb5757;
     padding: 5px 17px;
     transition: 0.2s;
-    margin: 10px 0 0 0;
 }
 
 button:hover{
