--- a/projetosite/Estilo/produtos.css
+++ b/projetosite/Estilo/produtos.css
@@ -49,7 +49,7 @@
 }
 
 .matrizd{
-    height: 590px;
+    height: 520px;
     border-radius: 10px;
     margin: 0px 10px;
     transition: 0.2s;
@@ -58,6 +58,11 @@
 
 .d20{
     text-align: center;
+    height: 75px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     padding: 30px 0 0 0;
 }
 
@@ -69,9 +74,4 @@
 #btnb:hover{
     border: 1px solid white;
     box-shadow: 0 0 0 1px #fff, 0 0 0 3px #222;
-}
-
-.dtm{
-    font-size: 1.29em;
-    padding: 0 0 10px 0;
 }
