--- a/projetosite/Estilo/direcionar.css
+++ b/projetosite/Estilo/direcionar.css
@@ -1,16 +1,12 @@
 @charset "UTF-8";
 
-*{
-    margin: 0px;
-}
-
 #direcionar{
     background-color: #eb5757;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 230px;
-    height: 48px;
+    padding: 0 220px;
+    height: 50px;
 }
 
 .link{
@@ -20,7 +16,7 @@
 
 .li{
     display: inline-block;
-    margin: 0px 35px 0px 0px;
+    margin: 0px 30px 0px 0px;
 }
 
 #u{
@@ -31,7 +27,7 @@
 }
 
 #c{
-    width: 20px;
+    width: 17px;
 }
 
 #carrinho{
@@ -39,9 +35,7 @@
     padding: 4px 15px 3px 15px;
 }
 
-#car{
-    display: inline-block;
-    position: relative;
-    bottom: 4px;
+.logo{
+    width: 85px;
 }
 
