--- a/projetosite/Estilo/cards.css
+++ b/projetosite/Estilo/cards.css
@@ -21,7 +21,6 @@
 }
 
 #b2{
-    height: 270px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -31,9 +30,18 @@
     width: 270px;
     height: 270px;
     background-color: #222;
-    border-radius: 3%;
+    border-radius: 6px;
     color: white;
-    margin: 0px 25px;
+    margin: 0 0 30px 0;
+}
+
+.guia{
+    height: 380px;
+    width: 270px;
+    border-radius: 6px;
+    margin: 0 25px;
+    text-align: justify;
+    padding: 0 0 20px 0;
 }
 
 .b23{
@@ -65,16 +73,4 @@
     position: relative;
     left: 12%;
     top: 15%;
-}
-
-#b3{
-    display: flex;
-    justify-content: center;
-    padding: 20px 0px 10px 0px;
-}
-
-.b31{
-    width: 270px;
-    text-align: justify;
-    margin: 0px 25px;
 }
